# project1_kolesnik_matvey_m25-555

./: .gitignore  README.md  demo.cast  exit  git revert a89f2f733616aab13c757f0c8339391cf0e000dd  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
