[tool.poetry]
name = "project1-kolesnik-matvey-m25-555"
version = "0.1.0"
description = "Текстовая приключенческая игра 'Лабиринт сокровищ' - консольный квест с головоломками и исследованием лабиринта"
authors = ["Матвей Колесник <mkolesnik260592@gmail.com>"]
readme = "README.md"
packages = [
    {include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
